--- a/IT-Step/2019.10.14/main.css
+++ b/IT-Step/2019.10.14/main.css
@@ -15,6 +15,7 @@ section.note {
 
 section.note q {
     background-color: lightgoldenrodyellow;
+    border-color: inherit;
     color: darkgoldenrod;
 }
 
